--- a/README
+++ b/README
@@ -14,3 +14,4 @@ https://registry.platformio.org/libraries/soshirofujimori/liboshima
 ■こころがけていること
 ・様々なプラットフォームで動作するようにすること
 ・String型などのメモリを消費する型を使わないこと
+・不必要な処理や重い処理を含むライブラリ関数を使わないこと
