--- a/README
+++ b/README
@@ -15,3 +15,6 @@ https://registry.platformio.org/libraries/soshirofujimori/liboshima
 ・様々なプラットフォームで動作するようにすること
 ・String型などのメモリを消費する型を使わないこと
 ・不必要な処理や重い処理を含むライブラリ関数を使わないこと
+
+■git cloneできない場合
+git config --global http.postBuffer 524288000  
