Refactor README to include guidelines for library devs

--- a/README
+++ b/README
@@ -21,6 +21,12 @@ https://www.ardu-badge.com/liboshima
 ・様々なプラットフォームで動作するようにすること
 ・String型などのメモリを消費する型を使わないこと
 ・不必要な処理や重い処理を含むライブラリ関数を使わないこと
+・ライブラリのユーザーに不必要な選択肢を与え、挫折させないようにすること
+（ライブラリのユーザーが直接インクルードする必要のないヘッダーファイルには、_privateを付ける）
+・フォルダ内に存在するファイルの数が、大きすぎず、小さすぎないようにすること
+・スコープの広い物には、名前空間やクラス名でアクセスするようにすること
+（例: IM920SL::SEND_INTERVAL_MS（defineを使わない））
+（例外: FastSerial（ArduinoのSerialに似せるため））
 
 ■git cloneできない場合
 ・git config --global http.postBuffer 524288000  
