--- a/README
+++ b/README
@@ -43,3 +43,5 @@ https://www.ardu-badge.com/liboshima
 ・imsenderの定数を名前空間付きアクセスに変更。（例: IM920SL::SEND_INTERVAL_MS）
 ・ImSenderやImReceiverのシリアル通信とDebugLoggerのシリアル通信を同じにできないようにする。
 ・developブランチのiniの#develop指定をstableブランチには反映させないようにする。
+・converterのポインタ渡しを参照渡しに変更する。
+・コメントを更新する。
