--- a/README
+++ b/README
@@ -47,3 +47,4 @@ https://www.ardu-badge.com/liboshima
 ・動作確認
 ・examplesの追加（workflowsでバグを検知できるようにするため）
 ・liboshima.hをインクルードするようにする。
+・BitArrayのインデックスをstatic assertで検索。
