--- a/README
+++ b/README
@@ -45,5 +45,4 @@ https://www.ardu-badge.com/liboshima
 ・converterのポインタ渡しを参照渡しに変更する。
 ・コメントを更新する。
 ・1行関数はhで実装しinline展開する。
-・BitArrayのインデックスをstatic assertで検索。
-・exampleの更新と追加。
+・exampleの追加。
